--- a/style.css
+++ b/style.css
@@ -10,6 +10,31 @@ body {
     margin-left: auto;
 }
 
+@media (min-width: 1200px) {
+    . wrapper {
+        width: 1170px; 
+    }
+} 
+
+@media (min-width: 992px) {
+    . wrapper {
+        width: 960px; 
+    } 
+} 
+
+@media (min-width: 768px) {
+    . wrapper {
+        width: 720px; 
+    } 
+}
+
+@media (min-width: 576px) {
+    . wrapper {
+        width: 540px; 
+    } 
+}
+
+
 .parent {
     display: flex;
     flex-wrap: wrap;
